--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
       #play-button {
         width: 0;
       	height: 0;
+      	border-top: 50px solid transparent;
+      	border-left: 100px solid red;
+      	border-bottom: 50px solid transparent;
         cursor: pointer;
       }
 
